<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tetris</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tetris">Tetris</string>
    <string name="level">Level: </string>
    <string name="score">Score: </string>
    <string name="game_over">Game Over</string>
    <string name="new_high_score">New high score!  Enter your name:</string>
    <string name="result_score">Your Score: </string>
    <string name="restart">RESTART</string>
    <string name="back">BACK</string>
    <string name="tetrislogo">TETRIS</string>
    <string name="mlgb">MLGB</string>
    <string name="rank">RANK</string>
    <string name="name">NAME</string>
    <string name="high_score">High Scores</string>
    <string name="clear_high_score">Clear</string>
    <string name="clear_confirm">Clear all high scores</string>
    <string name="clear_confirm_msg">Are you sure? \nAll high scores will be cleared</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">N</string>
    <string name="tutorial">T</string>
    <string name="exit">E</string>
    <string name="high_score_option">H</string>

</resources>