<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/high_score_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/listColumnRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rank"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/listColumnName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/listColumnScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="30sp" />
    </TableRow>

    <Button
        android:id="@+id/clear_high_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="clearHighScores"
        android:text="@string/clear_high_score"
        android:textSize="30sp" />

</TableLayout>